# patronus

./: .gitignore  .sprint30-complete  ACHIEVEMENTS.md  ARCHITECTURE.md  BUILDING.md  CARGO-FEATURES-FIXED.md  CHANGELOG.md  CLI-README.md  COMMIT-MESSAGE-SPRINT-30.txt  COMPARISONS.md  COMPETITIVE-ANALYSIS.md  CONTRIBUTING.md  CURRENT-STATE.md  Cargo.toml  DEPLOYMENT-READY.md  DOCUMENTATION-SUMMARY.md  Dockerfile  EBPF-OPTIMIZATION.md  ENTERPRISE-FEATURES-COMPLETE.md  ENVIRONMENT-SETUP.md  FEATURE-COMPARISON.md  FEATURE-COMPLETION.md  FINAL-GAP-ANALYSIS.md  FINAL-STATUS.md  FINAL-SUMMARY.md  GAP-ANALYSIS.md  GENTOO-INTEGRATION-COMPLETE.md  IMPLEMENTATION-ROADMAP.md  INNOVATION-ROADMAP.md  KILLER-FEATURES-ANALYSIS.md  LICENSE  MASTER-INDEX.md  NEXT-STEPS-SPRINT-31.md  OVERALL_PROGRESS.md  PHASE-2-COMPLETE.md  PHASE-3-COMPLETE.md  PRODUCTION_READY.md  PROGRESS-UPDATE.md  PROJECT-COMPLETE.md  PROJECT-COMPLETION-SUMMARY.md  (+64 more)
.cargo/: config.toml  deny.toml
crates/patronus-ai/: Cargo.toml
crates/patronus-ai/src/: engine.rs  feature_collector.rs  lib.rs  models.rs  rule_generator.rs  threat_intel.rs
crates/patronus-ansible/: Cargo.toml
crates/patronus-ansible/src/: inventory.rs  lib.rs  module.rs  playbook.rs
crates/patronus-bench/: Cargo.toml
crates/patronus-bench/src/: connection_rate.rs  cpu_memory.rs  firewall_rules.rs  latency.rs  main.rs  nat_performance.rs  report.rs  throughput.rs  vpn_throughput.rs
crates/patronus-bgp/: Cargo.toml
crates/patronus-bgp/src/: config.rs  error.rs  fsm.rs  lib.rs  manager.rs  messages.rs  neighbor.rs  rib.rs  route.rs  session.rs
crates/patronus-captiveportal/: Cargo.toml
crates/patronus-captiveportal/src/: auth.rs  bandwidth.rs  lib.rs  portal.rs  sessions.rs  vouchers.rs
crates/patronus-cli/: Cargo.toml
crates/patronus-cli/src/: main.rs
crates/patronus-cli/src/commands/: bgp.rs  daemon.rs  deploy.rs  init.rs  metrics.rs  mod.rs  policy.rs  site.rs  status.rs  tunnel.rs  validate.rs
crates/patronus-cni/: Cargo.toml
crates/patronus-cni/src/: cni_plugin.rs  ebpf_datapath.rs  lib.rs  main.rs  network_policy.rs  service_mesh.rs
crates/patronus-config/: Cargo.toml
crates/patronus-config/src/: apply.rs  declarative.rs  lib.rs  schema.sql  store.rs
crates/patronus-core/: Cargo.toml
crates/patronus-core/src/: auth.rs  backup.rs  certs.rs  error.rs  lib.rs  service.rs  totp.rs  types.rs  validation.rs
crates/patronus-dashboard/: Cargo.toml  README.md  SECURITY.md  build-frontend.sh
crates/patronus-dashboard/frontend/: index.html  package.json  vite.config.ts
crates/patronus-dashboard/src/: error.rs  lib.rs  main.rs  state.rs
crates/patronus-dashboard/static/: app.js  auth.js  index.html  login.html  styles.css
crates/patronus-dashboard/tests/: cache_system.rs  token_revocation.rs  traffic_statistics.rs  websocket_events.rs
crates/patronus-diagnostics/: Cargo.toml
crates/patronus-diagnostics/src/: lib.rs  packet_capture.rs  tools.rs
crates/patronus-ebpf/: Cargo.toml
crates/patronus-ebpf/src/: lib.rs  maps.rs  programs.rs  sdwan.rs  stats.rs  xdp.rs
crates/patronus-firewall/: Cargo.toml
crates/patronus-firewall/src/: aliases.rs  geoip.rs  lib.rs  nftables.rs  rules.rs  scheduler.rs
crates/patronus-gateway/: Cargo.toml
crates/patronus-gateway/src/: auth.rs  lib.rs  ratelimit.rs  router.rs
crates/patronus-gitops/: Cargo.toml
crates/patronus-gitops/src/: lib.rs  watcher.rs  webhook.rs
crates/patronus-installer/: Cargo.toml
crates/patronus-installer/src/: config.rs  error.rs  lib.rs  main.rs
crates/patronus-monitoring/: Cargo.toml
crates/patronus-monitoring/src/: alerts.rs  lib.rs  metrics.rs  prometheus.rs  status.rs
crates/patronus-multicloud/: Cargo.toml
crates/patronus-multicloud/src/: aws.rs  azure.rs  gcp.rs  lib.rs  manager.rs
crates/patronus-network/: Cargo.toml
crates/patronus-network-functions/: Cargo.toml
crates/patronus-network-functions/src/: lib.rs  loadbalancer.rs  nat.rs  waf.rs
crates/patronus-network/src/: ddns.rs  dhcp.rs  dns.rs  frr.rs  gateway_groups.rs  ha.rs  ids.rs  interfaces.rs  ipsec.rs  lib.rs  multiwan.rs  nat64.rs  netflow.rs  ntp.rs  openvpn.rs  pppoe.rs  qos.rs  routing.rs  snmp.rs  vlan.rs  wireguard.rs  wireless.rs
crates/patronus-observability/: Cargo.toml
crates/patronus-observability/src/: dashboards.rs  lib.rs  metrics.rs  tracing.rs
crates/patronus-plugin/: Cargo.toml
crates/patronus-plugin/src/: lib.rs
crates/patronus-rl-optimizer/: Cargo.toml
crates/patronus-rl-optimizer/src/: lib.rs  qlearning.rs  route_optimizer.rs  state.rs
crates/patronus-sdwan/: Cargo.toml  README.md
crates/patronus-sdwan/examples/: README.md  sdwan_cli.rs
crates/patronus-sdwan/src/: compression.rs  database.rs  dataplane.rs  dpi.rs  error.rs  lib.rs  mesh.rs  metrics.rs  monitor.rs  netpolicy.rs  peering.rs  policy.rs  qos.rs  routing.rs  sla.rs  traffic_stats.rs  types.rs
crates/patronus-sdwan/tests/: mesh_integration.rs
crates/patronus-secrets/: Cargo.toml
crates/patronus-secrets/src/: crypto.rs  lib.rs  manager.rs  store.rs  validation.rs
crates/patronus-security/: Cargo.toml
crates/patronus-security/src/: lib.rs  mtls.rs  pki.rs  policy.rs  zerotrust.rs
crates/patronus-self-healing/: Cargo.toml
crates/patronus-self-healing/src/: detector.rs  healing_loop.rs  lib.rs  remediation.rs
crates/patronus-servicemesh/: Cargo.toml
crates/patronus-servicemesh/src/: gateway.rs  istio.rs  lib.rs  linkerd.rs  smi.rs
operator/: Cargo.toml  Dockerfile  Makefile  OPERATIONS.md  README.md
operator/crds/: crds.yaml  policy-crd.yaml  site-crd.yaml
operator/examples/: http-policy.yaml  operator-deployment.yaml  policy-backup.yaml  policy-voip.yaml  production.yaml  simple-site.yaml  site-branch.yaml  site-hq.yaml
operator/helm/patronus-operator/: Chart.yaml  README.md  values.yaml
operator/src/: health.rs  lib.rs  main.rs  metrics.rs
operator/src/controllers/: mod.rs  policy.rs  site.rs
operator/src/crd/: mod.rs  policy.rs  site.rs
operator/tests/: README.md  health_check_test.rs  policy_lifecycle_test.rs  site_lifecycle_test.rs
(+345 files in other folders)
