[package]
name = "patronus-ai"
version.workspace = true
edition.workspace = true
license.workspace = true
authors.workspace = true

[dependencies]
patronus-core = { path = "../patronus-core" }
patronus-ebpf = { path = "../patronus-ebpf" }
patronus-firewall = { path = "../patronus-firewall" }
tokio.workspace = true
async-trait.workspace = true
anyhow.workspace = true
thiserror.workspace = true
tracing.workspace = true
serde.workspace = true
serde_json.workspace = true
chrono.workspace = true
ndarray = "0.15"
linfa = "0.7"
linfa-clustering = "0.7"
linfa-svm = "0.7"
smartcore = "0.3"
reqwest = { version = "0.11", features = ["json"] }
csv = "1.3"
uuid = { version = "1.6", features = ["v4", "serde"] }
rand = "0.8"
