[package]
name = "patronus-bench"
version.workspace = true
edition.workspace = true
license.workspace = true
authors.workspace = true

[[bin]]
name = "patronus-bench"
path = "src/main.rs"

[dependencies]
# Async runtime
tokio = { workspace = true }
async-trait = { workspace = true }

# Serialization
serde = { workspace = true }
serde_json = { workspace = true }

# Error handling
anyhow = { workspace = true }
thiserror = { workspace = true }

# CLI
clap = { version = "4.5", features = ["derive"] }
colored = "2.1"

# Statistics
statistical = "1.0"

# System metrics
sysinfo = "0.30"
procfs = "0.16"

# Network testing
pnet = "0.34"
socket2 = "0.5"

# Time measurement
instant = "0.1"

# Logging
tracing = { workspace = true }
tracing-subscriber = { workspace = true }

# Additional dependencies
chrono = { workspace = true }

# CSV export
csv = "1.3"

# Charts/visualization
plotters = { version = "0.3", optional = true }

[features]
default = []
charts = ["plotters"]
