[package]
name = "patronus-bgp"
version.workspace = true
edition.workspace = true
license.workspace = true
authors.workspace = true
repository.workspace = true

[dependencies]
tokio = { version = "1.35", features = ["full"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
thiserror = "1.0"
tracing = "0.1"
async-trait = "0.1"
bytes = "1.5"

# Network types
ipnetwork = "0.20"

# For FRRouting integration
tokio-util = { version = "0.7", features = ["codec"] }
futures = "0.3"
