[package]
name = "patronus-captiveportal"
version.workspace = true
edition.workspace = true
license.workspace = true
authors.workspace = true

[dependencies]
patronus-core = { path = "../patronus-core" }
tokio.workspace = true
async-trait.workspace = true
anyhow.workspace = true
thiserror.workspace = true
tracing.workspace = true
serde.workspace = true
serde_json.workspace = true
chrono.workspace = true
uuid.workspace = true
axum.workspace = true
tower = "0.5"
sqlx = { version = "0.8", features = ["runtime-tokio", "sqlite"] }
bcrypt = "0.15"
rand = "0.8"
