[package]
name = "patronus-config"
version.workspace = true
edition.workspace = true
license.workspace = true

[dependencies]
patronus-core = { path = "../patronus-core" }
tokio.workspace = true
serde.workspace = true
serde_json.workspace = true
serde_yaml = "0.9"
toml.workspace = true
anyhow.workspace = true
thiserror.workspace = true
tracing.workspace = true
sqlx.workspace = true
chrono.workspace = true
uuid.workspace = true

[dev-dependencies]
tempfile = "3.10"
