[package]
name = "patronus-core"
version.workspace = true
edition.workspace = true
license.workspace = true

[features]
default = []
certificates = []

[dependencies]
tokio.workspace = true
async-trait.workspace = true
serde.workspace = true
serde_json.workspace = true
anyhow.workspace = true
thiserror.workspace = true
tracing.workspace = true
chrono = { workspace = true, features = ["serde"] }
hostname = "0.3"
sha2 = "0.10"
