[package]
name = "patronus-dashboard"
version = "0.1.0"
edition = "2021"
authors = ["Patronus Project"]
description = "Enterprise dashboard for Patronus SD-WAN management"
license = "MIT"

[dependencies]
# SD-WAN integration
patronus-sdwan = { path = "../patronus-sdwan" }

# Web framework
axum = { version = "0.7", features = ["ws", "macros"] }
tokio = { version = "1.40", features = ["full"] }
tower = { version = "0.5", features = ["util"] }
tower-http = { version = "0.6", features = ["fs", "trace", "cors"] }

# Serialization
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"

# Database
sqlx = { version = "0.8", features = ["runtime-tokio", "sqlite"] }

# Time
chrono = { version = "0.4", features = ["serde"] }

# Logging
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }

# Error handling
anyhow = "1.0"
thiserror = "1.0"

# UUID
uuid = { version = "1.10", features = ["v4", "serde"] }

# Async
futures = "0.3"
