[package]
name = "patronus-diagnostics"
version.workspace = true
edition.workspace = true
license.workspace = true
authors.workspace = true

[dependencies]
patronus-core = { path = "../patronus-core" }
tokio.workspace = true
async-trait.workspace = true
anyhow.workspace = true
thiserror.workspace = true
tracing.workspace = true
serde.workspace = true
serde_json.workspace = true
chrono.workspace = true
nix.workspace = true
