[package]
name = "patronus-gateway"
version.workspace = true
edition.workspace = true
license.workspace = true
authors.workspace = true
repository.workspace = true

[dependencies]
tokio.workspace = true
serde.workspace = true
serde_json.workspace = true
anyhow.workspace = true
tracing.workspace = true
axum.workspace = true
tower.workspace = true
tower-http.workspace = true
async-trait.workspace = true
jsonwebtoken = "9.2"
redis = { version = "0.24", features = ["tokio-comp"] }
