[package]
name = "patronus-gitops"
version = "0.1.0"
edition = "2021"

[dependencies]
patronus-config = { path = "../patronus-config" }
tokio = { version = "1.35", features = ["full"] }
anyhow = "1.0"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
serde_yaml = "0.9"
toml = "0.8"
tracing = "0.1"
git2 = "0.18"
notify = "6.1"
async-trait = "0.1"
chrono = { version = "0.4", features = ["serde"] }
reqwest = { version = "0.11", features = ["json"] }
hmac = "0.12"
sha2 = "0.10"
hex = "0.4"
