[package]
name = "patronus-gitops"
version = "0.1.0"
edition = "2021"

[dependencies]
patronus-config = { path = "../patronus-config" }
tokio.workspace = true
anyhow.workspace = true
thiserror.workspace = true
serde.workspace = true
serde_json.workspace = true
serde_yaml = "0.9"
toml.workspace = true
tracing.workspace = true
git2 = "0.18"
notify = "6.1"
async-trait.workspace = true
chrono.workspace = true
reqwest.workspace = true
hmac = "0.12"
sha2 = "0.10"
hex = "0.4"
