[package]
name = "patronus-installer"
version.workspace = true
edition.workspace = true
license.workspace = true
authors.workspace = true
description = "Full-featured installer for Patronus firewall/SD-WAN system"

[[bin]]
name = "patronus-install"
path = "src/main.rs"

[dependencies]
# TUI
ratatui = "0.29"
crossterm = "0.28"

# CLI
clap = { version = "4", features = ["derive"] }
dialoguer = "0.11"
indicatif = "0.17"
console = "0.15"

# Async runtime
tokio = { workspace = true }

# System operations
nix = { version = "0.29", features = ["fs", "mount", "process", "user"] }
sysinfo = "0.32"

# Serialization
serde = { workspace = true }
serde_json = { workspace = true }
toml = { workspace = true }

# Logging
tracing = { workspace = true }
tracing-subscriber = { workspace = true }

# Error handling
thiserror = "2"
anyhow = { workspace = true }

# Utilities
regex = "1"
uuid = { workspace = true }
chrono = { workspace = true }
