[package]
name = "patronus-network-functions"
version.workspace = true
edition.workspace = true
license.workspace = true
authors.workspace = true
repository.workspace = true

[dependencies]
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
tokio = { version = "1.47", features = ["full"] }
anyhow = "1.0"
thiserror = "1.0"
tracing = "0.1"
uuid = { version = "1.0", features = ["v4", "serde"] }
chrono = { version = "0.4", features = ["serde"] }
ipnetwork = "0.20"
regex = "1.11"
async-trait = "0.1"
dashmap = "6.1"

[dev-dependencies]
tokio-test = "0.4"
