[package]
name = "patronus-network"
version.workspace = true
edition.workspace = true
license.workspace = true

[features]
default = []
dhcp = ["dep:dhcproto"]
dns = ["dep:trust-dns-server"]
wireguard = []
openvpn = []
ipsec = []
vlan = []
qos = []
multiwan = []
ha = []
intrusion-detection = []
dynamic-routing = []

[dependencies]
patronus-core = { path = "../patronus-core" }
tokio.workspace = true
async-trait.workspace = true
serde.workspace = true
anyhow.workspace = true
thiserror.workspace = true
tracing.workspace = true
nix.workspace = true
netlink-packet-core.workspace = true
netlink-packet-route.workspace = true
rtnetlink = "0.14"
ipnetwork = "0.20"
futures = "0.3"

# Optional features
dhcproto = { workspace = true, optional = true }
trust-dns-server = { workspace = true, optional = true }
# wireguard-control = { workspace = true, optional = true }  # Removed - not used
