[package]
name = "patronus-plugin"
version.workspace = true
edition.workspace = true
license.workspace = true
authors.workspace = true
repository.workspace = true

[dependencies]
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
anyhow = "1.0"
thiserror = "1.0"
async-trait = "0.1"

[dev-dependencies]
tokio = { version = "1.47", features = ["full"] }
tokio-test = "0.4"
