[package]
name = "patronus-sdwan"
version = "0.1.0"
edition = "2021"
authors = ["Patronus Project"]
description = "SD-WAN mesh networking for Patronus firewall"
license = "MIT"

[dependencies]
# Async runtime
tokio = { version = "1.40", features = ["full"] }
tokio-util = "0.7"

# Networking
quinn = "0.11"  # QUIC for control plane
socket2 = "0.5"

# Serialization
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
bincode = "1.3"

# Database
sqlx = { version = "0.8", features = ["runtime-tokio", "sqlite"] }

# Crypto
ed25519-dalek = "2.1"
x25519-dalek = "2.0"
rand = "0.8"
base64 = "0.22"

# Data structures
dashmap = "6.1"
uuid = { version = "1.10", features = ["v4", "serde"] }

# Time
chrono = { version = "0.4", features = ["serde"] }

# Logging
tracing = "0.1"
tracing-subscriber = "0.3"

# Error handling
anyhow = "1.0"
thiserror = "1.0"

[dev-dependencies]
tokio-test = "0.4"
